# Ai-Reciept

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test.py
.github/workflows/: tests.yml
app/: errors.py
app/routes/: categories.py  insights.py  reciepts.py  recurring.py  reports.py  transactions.py  workspace.py
app/services/: categories.py  graphs.py  insights.py  reciepts.py  recurring.py  reports.py  transactions.py  workspace.py
app/services/aggregators/: __init__.py  category.py  items.py  summary.py
app/utils/: llm_advice.py  query_transactions.py  reciept_parser.py  save_reciept_image.py
docs/: VARIANTS.md
static/: site.webmanifest
templates/: index.html  index_b.html  recurring.html  upload.html
tests/: README.md  conftest.py  test_aggregators.py  test_categories.py  test_e2e.py  test_health.py  test_insights.py  test_reports.py  test_transactions.py  test_workspace.py
