[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-spending-analyzer"
version = "0.1.0"
description = "A self-hostable Flask API that reads receipt photos with an LLM, auto-categorises line items, and turns them into reports, budgets and AI saving advice."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Waleed Ajmal" }]
keywords = [
  "receipt",
  "ocr",
  "spending",
  "expenses",
  "budget",
  "finance",
  "flask",
  "openai",
  "llm",
  "self-hosted",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

# Direct runtime dependencies (lower-bounded to the versions this was built on;
# see requirements.txt for the fully pinned, reproducible lockfile).
dependencies = [
  "Flask>=3.1",
  "openai>=1.98",
  "pandas>=2.3",
  "matplotlib>=3.10",
  "pillow>=11.3",
  "python-dotenv>=1.1",
]

[project.urls]
Homepage = "https://github.com/waleedsworld/Ai-Reciept"
Repository = "https://github.com/waleedsworld/Ai-Reciept"
Issues = "https://github.com/waleedsworld/Ai-Reciept/issues"

[project.scripts]
receipt-analyzer = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["templates/*", "static/*", "static/**/*"]
